Revamp hotkeys, fix some shortcut bugs
Fixes #8 - now all keyboard shortcuts use the actual character they are meant to represent (now use "*" instead of "shift+Digit8").  And because hotkeys now no longer support Shift, I simplified the `modifyForHotkey` function a bit.

Also fixes an issue I discovered where any shortcuts for buttons hidden behind the "2nd" button would be executed twice if the "2nd" button (alt mode) was already enabled.  Ex. pressing 2nd, then ctrl+del (for "drop") would drop two items from the stack instead of just one.

--- a/src/App.css
+++ b/src/App.css
@@ -169,6 +169,10 @@ body,
   background: var(--calculator-button-active-color);
 }
 
+.hidden {
+  display: none;
+}
+
 sup,
 sub {
   font-size: 60%;
